# wayfinder

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile.api  Dockerfile.sandbox  LEARNINGS.md  README.md  cloudbuild.yaml  docker-compose.yml  progress.md  project6_enterprise_workflow_case_study_plan.md  pyproject.toml  pyrightconfig.json  railway.json  railway.sandbox.json
.github/workflows/: ci.yml
dashboard/: Dockerfile  next.config.ts  package-lock.json  package.json  railway.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  loading.tsx  page.tsx
dashboard/components/: agent-workbench.tsx  app-shell.tsx  auth-panel.tsx  current-run-console.tsx  dashboard-stats.tsx  history-view.tsx  repo-conversation-workspace.tsx  run-activity.tsx  run-briefing-panel.tsx  run-launcher.tsx  run-status-table.tsx  stat-card.tsx  workspace-account.tsx  workspace-metrics.tsx  workspace-settings.tsx  workspace-tabs.tsx
dashboard/lib/: api.ts  chat.ts  format.ts  metrics.ts  mock-data.ts  run-output.ts  session.ts  threads.ts  types.ts  use-polling.ts  wayfinder-proxy.ts  workspace-api.ts  workspace-format.ts
deploy/: run_fastmcp_http.py  start_api.py
docs/blog/: wayfinder_launch_post.md
docs/case_studies/: enterprise_eval_report.md  enterprise_workflow_agent.md
docs/demo/: recursive_demo_script.md
docs/deploy/: README.md  railway_postgres.md
docs/design_notes/: 001_mcp_tool_call_reliability.md  002_project5_mcp_integration.md  003_community_mcp_integration.md  004_supervisor_state_machine.md  005_architect_mapper.md  006_entry_explainer.md  007_verifier_hitl.md  008_reflection_resilience.md  009_runtime_observability.md  010_dashboard_deploy_ship_evidence.md  011_enterprise_workflow_case_study.md  012_project5_http_mcp_deploy.md  013_grounded_llm_synthesis.md  014_user_workspaces_persistent_history.md  017_repo_conversation_threads.md  (+10 more)
tests/: test_agent_roles.py  test_api.py  test_architect_mapper.py  test_claim_packets.py  test_community_mcp_configs.py  test_community_mcp_integration.py  test_deploy_start_api.py  test_enterprise_policy.py  test_enterprise_workflow.py  test_entry_explainer.py  test_graph_contract.py  test_graph_runtime.py  test_grounded_synthesis.py  test_ingestion_resolver.py  test_mcp_adapter.py  test_module_source.py  test_postgres_store.py  test_project5_mcp_configs.py  test_project5_mcp_integration.py  test_provenance.py  test_resilience.py  test_routing.py  test_sandbox_worker.py  test_secret_box.py  test_supervisor_plan.py  test_verifier.py  test_verifier_challenge.py
(+94 files in other folders)
