[project]
name = "wayfinder"
version = "0.1.0"
description = "Verifier-backed codebase onboarding copilot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.60",
  "pydantic>=2.10.0",
  "uvicorn[standard]>=0.32.0",
  "langchain-mcp-adapters>=0.1.0",
  "tenacity>=8.2.0",
  "langgraph-checkpoint-sqlite>=3.1.0",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2.0",
]
dev = [
  "httpx>=0.27.0",
  "lovranran-mcp-test-runner",
  "mcp-ast-explorer",
  "mcp-repo-mapper",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-json-report>=1.5.0",
  "ruff>=0.8.0",
]

[tool.uv.sources]
lovranran-mcp-test-runner = { path = "../project5/mcp-test-runner", editable = true }
mcp-ast-explorer = { path = "../project5/mcp-ast-explorer", editable = true }
mcp-repo-mapper = { path = "../project5/mcp-repo-mapper", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wayfinder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

markers = [
  "integration: tests that call external MCP server processes",
]
